modificata la struttura del Dockerfile di springboot, permettendo il del .jar all'interno del container + aggiunta .dockerignore + modifica docker-compose permettendo di tirare su il container del frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,10 @@
+FROM maven:3.8.3-openjdk-17 AS spring-builder
+WORKDIR /usr/src/app
+COPY . /usr/src/app
+RUN mvn clean package
+
 FROM eclipse-temurin:17
-COPY target/storj-1.0.0.jar /opt/app/storj.jar
+WORKDIR /opt/app
+COPY --from=spring-builder /usr/src/app/target/storj-1.0.0.jar /opt/app/storj.jar
 EXPOSE 8080
 CMD ["java", "-jar", "/opt/app/storj.jar"]
