--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#docker
 spring.datasource.url=jdbc:postgresql://db:5432/storj
+#coding
+#spring.datasource.url=jdbc:postgresql://0.0.0.0:5435/storj
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
