modifiche varie alle API + modifica alla properties per la gestione degli ENUM + modifiche ad Utente ed ErrorEnum + creazione dei controller da completare

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #docker
-spring.datasource.url=jdbc:postgresql://db:5432/storj
+spring.datasource.url=jdbc:postgresql://db:5432/storj?stringtype=unspecified
 #coding
-#spring.datasource.url=jdbc:postgresql://0.0.0.0:5435/storj
+#spring.datasource.url=jdbc:postgresql://0.0.0.0:5435/storj?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
